--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,7 @@ DB_DATABASE=nestjs
 DB_SYNC=true
 DB_AUTOLOAD=true
 SECRET_KEY='some-secret-key'
+JWT_TOKEN_SECRET='some-secret-key'
+JWT_TOKEN_EXPIRATION_TIME=3600
+JWT_TOKE_AUDIENCE=localhost:3000
+JWT_TOKEN_ISSUER=localhost:3000
