add refresh token

--- a/.env.development
+++ b/.env.development
@@ -10,5 +10,6 @@ DB_AUTOLOAD=true
 SECRET_KEY='some-secret-key'
 JWT_TOKEN_SECRET='some-secret-key'
 JWT_TOKEN_EXPIRATION_TIME=3600
-JWT_TOKE_AUDIENCE=localhost:3000
+REFRESH_TOKEN_EXPIRES_IN=86400
+JWT_TOKEN_AUDIENCE=localhost:3000
 JWT_TOKEN_ISSUER=localhost:3000
